Closed Bug 973319 Opened 10 years ago Closed 10 years ago

Firefox 30.0a1 Crash Report [@ XPCVariant::Release() ]

Categories

(Core :: Networking: Cache, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla31

People

(Reporter: mayankleoboy1, Assigned: mayhemer)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

Attached file about support.txt
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:30.0) Gecko/20100101 Firefox/30.0 (Beta/Release)
Build ID: 20140215030204

Steps to reproduce:

i have OMTC+ new cache + browser.remote.tabs= true.

I opened amazon.in , cicked on my orders. While the page was loading, i opened google chrome, and minimised+maximised Nightly 3-4 times.


Actual results:

crash


Expected results:

no crash.

I dont have reproducible STR

https://crash-stats.mozilla.com/report/index/87d22746-f0ad-4b6d-9798-a53992140216
Keywords: crash
The crash looks cache related so maybe "new cache" is the culprit?
Component: General → Networking: Cache
This is #11 in topcrashers for Firefox 30.0a1 right now, with 300 crashes out of 13087 in the last 7 days.
Crash Signature: [@ XPCVariant::Release() ]
So the range of this bug's spike is from 2014021903 to 2014022503 which is around when new cache was turned on and off for nightly ( Bug 967693 until Bug 975829 ).
Oh, it looks like the last crash report was from 20140222, so this is probably fixed now. 

Danny also pointed out it is probably related to meta bug 913806. (Thanks!)
Blocks: cache2enable
If it's related to new cache, then it might well just be disabled and not fixed, and it might be an issue that devs need to look into before turning new cache on permanently.
I hadn't filed this one because it *did* look as though something else had fixed it.  However, that is not the case.  There are crashes for builds of 20140225 and a couple for 20140226. Currently don't see data for 20140227.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Hardware: x86_64 → All
Yep, related to cache2.  Apparently we release the channel on the cache2 IO thread.  This must not happen since the channel may release a lot of other stuff (own callbacks etc.)

This should be simple to fix.
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Attached patch v1Splinter Review
the cause of why the channel is not released on the correct thread:
- the final callback (onCacheEntryAvailable) we redirect to the main thread
- but it's executed thanks thread scheduling sooner then we finish CacheEntry::InvokeCallbacks on the IO thread
- hence we finally release the channel on the IO thread

This could actually be considered a critical bug.
Attachment #8390459 - Flags: review?(michal.novotny)
(I cannot right now do a try push, but we should do it for this patch before landing)
Attachment #8390459 - Flags: review?(michal.novotny) → review+
https://hg.mozilla.org/mozilla-central/rev/caf798d7391a
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
@mayankleoboy1, are you able to reproduce this crash anymore?
Flags: needinfo?(mayankleoboy1)
Not in a long time.
Flags: needinfo?(mayankleoboy1)
(In reply to mayankleoboy1 from comment #13)
> Not in a long time.

Thanks!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: