Bug 973319 - Release CacheEntry callbacks on the proper thread, r=michal